# Hmanga

./: .gitignore  AGENTS.md  Cargo.toml  Dioxus.toml  README.md  skills-lock.json
.cargo/: config.toml
.crush/skills/: dioxus-knowledge-patch
.github/workflows/: ci.yml  release.yml
crates/hmanga-app/: Cargo.toml
crates/hmanga-app/src/: app.rs  main.rs  routes.rs  service.rs  state.rs
crates/hmanga-app/src/components/: downloads_pane.rs  mod.rs  search_pane.rs  settings_pane.rs  sidebar.rs
crates/hmanga-app/tests/: bootstrap.rs
crates/hmanga-core/: Cargo.toml
crates/hmanga-core/src/: config.rs  error.rs  lib.rs  models.rs  persistence.rs  plugin.rs
crates/hmanga-core/src/download/: export.rs  manager.rs  mod.rs  speed.rs
crates/hmanga-core/tests/: download_manager.rs  model_roundtrip.rs
crates/hmanga-host/: Cargo.toml
crates/hmanga-host/src/: catalog.rs  host_api.rs  lib.rs  native.rs  registry.rs  wasm.rs
crates/hmanga-host/tests/: registry.rs
crates/hmanga-plugin-jm/: Cargo.toml
crates/hmanga-plugin-jm/src/: lib.rs
crates/hmanga-plugin-jm/tests/: jm_plugin.rs
crates/hmanga-plugin-wnacg/: Cargo.toml
crates/hmanga-plugin-wnacg/src/: lib.rs
crates/hmanga-plugin-wnacg/tests/: wnacg_plugin.rs
docs/plans/: 2026-04-09-hmanga-v1-bootstrap.md  2026-04-10-hmanga-improvement-plan.md
docs/superpowers/specs/: 2026-04-09-hmanga-design.md
plugin-sdk/hmanga-plugin-macro/: Cargo.toml
plugin-sdk/hmanga-plugin-macro/src/: lib.rs
plugin-sdk/hmanga-plugin-sdk/: Cargo.toml
plugin-sdk/hmanga-plugin-sdk/src/: abi.rs  lib.rs  prelude.rs
plugin-sdk/hmanga-plugin-sdk/tests/: sdk_contract.rs
