[package]
name = "hmanga-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio.workspace = true
zip.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tempfile = "3"
rmp-serde = "1.3"
