[package]
name = "hmanga-host"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
hmanga-core.workspace = true
hmanga-plugin-sdk.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
rmp-serde.workspace = true
thiserror.workspace = true
wasmtime.workspace = true
reqwest = { version = "0.12", features = ["cookies", "gzip", "brotli", "deflate", "json", "rustls-tls"] }
