[package]
name = "hmanga-plugin-jm"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
hmanga-core.workspace = true
aes = "0.8"
base64 = "0.22"
image = "0.25"
md5 = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json.workspace = true

[dev-dependencies]
tokio.workspace = true
