[package]
name = "hmanga-plugin-wnacg"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
hmanga-core.workspace = true
hmanga-plugin-macro.workspace = true
async-trait.workspace = true
scraper = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json.workspace = true
regex = "1"

[dev-dependencies]
tokio.workspace = true